Fix panel height on mobile

--- a/public/index.css
+++ b/public/index.css
@@ -1546,7 +1546,7 @@ reference: https://codepen.io/fearOfCode/pen/PoMyKQ
     }
 
     .hidden-panel.show {
-        height: 65vh;
+        height: 56vh;
     }
 
     .profile-pic {
